# FDAL

./: .env.example  .env.training  .gitignore  README.md  files_to_delete.txt  main.py  pyproject.toml
configs/cityscapes/: config_alfi.yaml  config_badge.yaml  config_cdal.yaml  config_coreset.yaml  config_divproto.yaml  config_entropy.yaml  config_fdal.yaml  config_fedal.yaml  config_midprc.yaml  config_ppal.yaml  config_random.yaml
configs/coco/: config_alfi.yaml  config_badge.yaml  config_cdal.yaml  config_coreset.yaml  config_daal.yaml  config_divproto.yaml  config_entropy.yaml  config_fdal.yaml  config_fedal.yaml  config_midprc.yaml  config_ppal.yaml  config_random.yaml
configs/kitti/: config_alfi.yaml  config_badge.yaml  config_cdal.yaml  config_coreset.yaml  config_divproto.yaml  config_entropy.yaml  config_fdal.yaml  config_fedal.yaml  config_midprc.yaml  config_ppal.yaml  config_random.yaml
configs/voc/: config_alfi.yaml  config_badge.yaml  config_cdal.yaml  config_coreset.yaml  config_divproto.yaml  config_entropy.yaml  config_fdal.yaml  config_fedal.yaml  config_midprc.yaml  config_ppal.yaml  config_random.yaml
scripts/: check_param.py  copy_selected_images.py  down_data.py  run_experiment.py  setup_data.py  simulate_labeling.py  strategy.py  train.py  utils.py
src/: __init__.py
src/data/: __init__.py  dataset.py  manager.py
src/models/: __init__.py  base.py  yolo_model.py
src/strategies/: __init__.py  base.py  diversity_strategy.py  random_strategy.py  uncertainty_strategy.py
src/strategies/diversity/: __init__.py  ccms.py  coreset.py
(+15 files in other folders)
